# grafeoR

./: .Rbuildignore  .gitignore  .mcp.json  DESCRIPTION  NAMESPACE  README.md  _pkgdown.yml
..Rcheck/: 00install.out  grafeoR-Ex.R  grafeoR-Ex.Rout
..Rcheck/grafeoR/: DESCRIPTION  INDEX  NAMESPACE
..Rcheck/tests/: testthat.R  testthat.Rout
R/: openflights.R
data-raw/: openflights_subset.R
docs/: 404.html  PLAN.html  PLAN.md  authors.html  authors.md  index.html  index.md  llms.txt  search.json  sitemap.xml
docs/articles/: getting-started.html  getting-started.md  index.html  index.md  openflights-analysis.html  openflights-analysis.md
docs/reference/: as.data.frame.grafeo_result.html  as.data.frame.grafeo_result.md  grafeoR-package.html  grafeoR-package.md  grafeoR.html  grafeo_db.html  grafeo_db.md  grafeo_version.html  grafeo_version.md  index.html  index.md  openflights_sample_data.html  openflights_sample_data.md  print.grafeo_result.html  print.grafeo_result.md
grafeoR.Rcheck/: 00install.out  grafeoR-Ex.R  grafeoR-Ex.Rout
grafeoR.Rcheck/00_pkg_src/grafeoR/src/rust/: Cargo.toml
grafeoR.Rcheck/grafeoR/: DESCRIPTION  INDEX
grafeoR.Rcheck/tests/: testthat.Rout
inst/: pkgdown.yml
inst/examples/: openflights-example.R
inst/extdata/: openflights-README.md  openflights_top20_airports.csv  openflights_top20_routes.csv
man/: as.data.frame.grafeo_result.Rd  grafeoR-package.Rd  grafeo_db.Rd  openflights_sample_data.Rd
src/: Makevars.in  entrypoint.c  grafeoR-win.def
tests/testthat/: test-openflights-sample.R
vignettes/: getting-started.Rmd
(+47 files in other folders)
