[package]
name = "grafeorust"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[lib]
crate-type = ["staticlib"]
name = "grafeoR"

[dependencies]
extendr-api = { version = "0.8.1", features = ["result_condition"] }
grafeo-common = "0.5.23"
grafeo-engine = { version = "0.5.23", default-features = false, features = ["gql", "wal", "grafeo-file", "spill", "mmap", "regex"] }

[profile.release]
lto = true
codegen-units = 1
